jupyter test done

--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -30,6 +30,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b3f53f2f-7b41-47df-ba6a-6336a119ec60",
+   "metadata": {},
+   "source": [
+    "Some of the commonly used libraries used by Data Scientists include:\n",
+    "1. NumPy\n",
+    "2. Pandas\n",
+    "3. Matplotlib\n",
+    "4. Scikit-learn\n",
+    "5. TensorFlow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b8c88156-c666-4923-98cd-89b897176b17",
    "metadata": {},
    "source": [
